--- a/index.html
+++ b/index.html
@@ -4,15 +4,16 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Anime Girl Joke Teller</title>
-    <!-- <link rel="icon" type="image/png" href="favicon.png" /> -->
+    <link rel="icon" type="image/png" href="img/favicon.png" />
     <link rel="stylesheet" href="style.css" />
   </head>
-  <body>
+  <body> 
     <div class="container">
       <div class="bubble left">WANNA HEAR A BAD JOKE?</div>
       <button id="button">Tell Me A Bad Joke</button>
       <audio id="audio" controls hidden></audio>
       <div id="quote_container" class="quote_text"><span id="quote"></span></div>
+      <footer><a href="https://hanif.tech/" target="_blank" rel="noopener noreferrer">Hanif.tech</a></footer>
     </div>
     <!-- Script -->
     <script src="voiceRSS.js"></script>
